Changed from getFirst(); to to.get(0) due to runtime errors.